HOTFIX - bug where closing accordion on mobile, then going to desktop would hide content

--- a/sass/_tabs.scss
+++ b/sass/_tabs.scss
@@ -34,6 +34,9 @@
     display: flex;
     &--hidden {
       display: none;
+      @include tablet {
+        display: block;
+      }
     }
   }
 
